# Present-Recommedation

./: .gitignore  README.md  pyproject.toml  recommend_test.py  requirements.txt
data/: README.md  graph_gen.py  graph_visualization.py  knowledge_graph.gexf  knowledge_graph_3d.html  recommendation_graph.pkl
data/graph_data/: Item-Trait-Weight.csv  Item_Concepts_Weight.csv  README.md  Trait-Concept-Weight.xlsx.csv  add_item_entities.py  entity_list.txt  generate_item_concept_weights.py  graph_relation.md  item_concept_weights.txt  item_trait_weights.txt  relation_list.txt  trait_concept_weights.txt  update_graph_weights.py
data/product/: products_with_concepts.csv  products_with_description_filtered.csv
data/psychology-question/: 2-choice-question.xlsx  4-choice-question.xlsx  5-point-question.xlsx  O-X-question.xlsx  concept-question.xlsx  trait-question.xlsx
docs/: evaluation_strategy.md  graph_recommendation_plan.md  node_design_analysis.md  persona_gt_generator.py  reference_analysis.md  strategy.md  vector_db_analysis.md
models/: README.md  graph_embedding.py  trainer.py
recommend/: data_loader.py  psychology_scoring_rules.md  recommendation_engine.py  scoring_calculator.py  streamlit_app.py  test_flow.py  test_recommendation_flow.ipynb
utils/: config.py
